--- a/Exercises/Exercise_0_MLP.ipynb
+++ b/Exercises/Exercise_0_MLP.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 179,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,8 +20,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "a)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 180,
    "metadata": {},
    "outputs": [
     {
@@ -131,7 +138,7 @@
        "4          70    usa  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 180,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -139,6 +146,446 @@
    "source": [
     "df_mpg = sns.load_dataset(\"mpg\").drop(\"name\", axis = 1)\n",
     "df_mpg.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 181,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "usa       249\n",
+       "japan      79\n",
+       "europe     70\n",
+       "Name: origin, dtype: int64"
+      ]
+     },
+     "execution_count": 181,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_mpg[\"origin\"].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 182,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 398 entries, 0 to 397\n",
+      "Data columns (total 8 columns):\n",
+      " #   Column        Non-Null Count  Dtype  \n",
+      "---  ------        --------------  -----  \n",
+      " 0   mpg           398 non-null    float64\n",
+      " 1   cylinders     398 non-null    int64  \n",
+      " 2   displacement  398 non-null    float64\n",
+      " 3   horsepower    392 non-null    float64\n",
+      " 4   weight        398 non-null    int64  \n",
+      " 5   acceleration  398 non-null    float64\n",
+      " 6   model_year    398 non-null    int64  \n",
+      " 7   origin        398 non-null    object \n",
+      "dtypes: float64(4), int64(3), object(1)\n",
+      "memory usage: 25.0+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_mpg.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 183,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>mpg</th>\n",
+       "      <th>cylinders</th>\n",
+       "      <th>displacement</th>\n",
+       "      <th>horsepower</th>\n",
+       "      <th>weight</th>\n",
+       "      <th>acceleration</th>\n",
+       "      <th>model_year</th>\n",
+       "      <th>origin</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>32</th>\n",
+       "      <td>25.0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>98.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2046</td>\n",
+       "      <td>19.0</td>\n",
+       "      <td>71</td>\n",
+       "      <td>usa</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>126</th>\n",
+       "      <td>21.0</td>\n",
+       "      <td>6</td>\n",
+       "      <td>200.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2875</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>74</td>\n",
+       "      <td>usa</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>330</th>\n",
+       "      <td>40.9</td>\n",
+       "      <td>4</td>\n",
+       "      <td>85.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1835</td>\n",
+       "      <td>17.3</td>\n",
+       "      <td>80</td>\n",
+       "      <td>europe</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>336</th>\n",
+       "      <td>23.6</td>\n",
+       "      <td>4</td>\n",
+       "      <td>140.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2905</td>\n",
+       "      <td>14.3</td>\n",
+       "      <td>80</td>\n",
+       "      <td>usa</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>354</th>\n",
+       "      <td>34.5</td>\n",
+       "      <td>4</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2320</td>\n",
+       "      <td>15.8</td>\n",
+       "      <td>81</td>\n",
+       "      <td>europe</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>374</th>\n",
+       "      <td>23.0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>151.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3035</td>\n",
+       "      <td>20.5</td>\n",
+       "      <td>82</td>\n",
+       "      <td>usa</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      mpg  cylinders  displacement  horsepower  weight  acceleration  \\\n",
+       "32   25.0          4          98.0         NaN    2046          19.0   \n",
+       "126  21.0          6         200.0         NaN    2875          17.0   \n",
+       "330  40.9          4          85.0         NaN    1835          17.3   \n",
+       "336  23.6          4         140.0         NaN    2905          14.3   \n",
+       "354  34.5          4         100.0         NaN    2320          15.8   \n",
+       "374  23.0          4         151.0         NaN    3035          20.5   \n",
+       "\n",
+       "     model_year  origin  \n",
+       "32           71     usa  \n",
+       "126          74     usa  \n",
+       "330          80  europe  \n",
+       "336          80     usa  \n",
+       "354          81  europe  \n",
+       "374          82     usa  "
+      ]
+     },
+     "execution_count": 183,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_mpg.query(\"horsepower.isna()\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 184,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Int64Index([32, 126, 330, 336, 354, 374], dtype='int64')"
+      ]
+     },
+     "execution_count": 184,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nan_index = df_mpg.query(\"horsepower.isna()\").index\n",
+    "nan_index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 185,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bins = pd.IntervalIndex.from_tuples([(69, 73), (74, 77), (78, 82)])\n",
+    "\n",
+    "df_mpg[\"model_year\"] = pd.cut(df_mpg[\"model_year\"], bins = bins)\n",
+    "df_mpg = pd.get_dummies(df_mpg, columns=[\"model_year\", \"origin\"], drop_first=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 186,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.impute import KNNImputer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 187,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "imputer = KNNImputer(n_neighbors=2)\n",
+    "imputed = imputer.fit_transform(df_mpg)\n",
+    "\n",
+    "df_imputed = pd.DataFrame(imputed, columns = df_mpg.columns)\n",
+    "df_mpg[\"horsepower\"] = round(df_imputed[\"horsepower\"])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 188,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>mpg</th>\n",
+       "      <th>cylinders</th>\n",
+       "      <th>displacement</th>\n",
+       "      <th>horsepower</th>\n",
+       "      <th>weight</th>\n",
+       "      <th>acceleration</th>\n",
+       "      <th>model_year_(74, 77]</th>\n",
+       "      <th>model_year_(78, 82]</th>\n",
+       "      <th>origin_japan</th>\n",
+       "      <th>origin_usa</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>32</th>\n",
+       "      <td>25.0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>98.0</td>\n",
+       "      <td>66.0</td>\n",
+       "      <td>2046</td>\n",
+       "      <td>19.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>126</th>\n",
+       "      <td>21.0</td>\n",
+       "      <td>6</td>\n",
+       "      <td>200.0</td>\n",
+       "      <td>106.0</td>\n",
+       "      <td>2875</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>330</th>\n",
+       "      <td>40.9</td>\n",
+       "      <td>4</td>\n",
+       "      <td>85.0</td>\n",
+       "      <td>60.0</td>\n",
+       "      <td>1835</td>\n",
+       "      <td>17.3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>336</th>\n",
+       "      <td>23.6</td>\n",
+       "      <td>4</td>\n",
+       "      <td>140.0</td>\n",
+       "      <td>104.0</td>\n",
+       "      <td>2905</td>\n",
+       "      <td>14.3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>354</th>\n",
+       "      <td>34.5</td>\n",
+       "      <td>4</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>63.0</td>\n",
+       "      <td>2320</td>\n",
+       "      <td>15.8</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>374</th>\n",
+       "      <td>23.0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>151.0</td>\n",
+       "      <td>86.0</td>\n",
+       "      <td>3035</td>\n",
+       "      <td>20.5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      mpg  cylinders  displacement  horsepower  weight  acceleration  \\\n",
+       "32   25.0          4          98.0        66.0    2046          19.0   \n",
+       "126  21.0          6         200.0       106.0    2875          17.0   \n",
+       "330  40.9          4          85.0        60.0    1835          17.3   \n",
+       "336  23.6          4         140.0       104.0    2905          14.3   \n",
+       "354  34.5          4         100.0        63.0    2320          15.8   \n",
+       "374  23.0          4         151.0        86.0    3035          20.5   \n",
+       "\n",
+       "     model_year_(74, 77]  model_year_(78, 82]  origin_japan  origin_usa  \n",
+       "32                     0                    0             0           1  \n",
+       "126                    0                    0             0           1  \n",
+       "330                    0                    1             0           0  \n",
+       "336                    0                    1             0           1  \n",
+       "354                    0                    1             0           0  \n",
+       "374                    0                    1             0           1  "
+      ]
+     },
+     "execution_count": 188,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_mpg[df_mpg.index.isin(nan_index)]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "None of the imputed values seems to be unreasonable."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "e)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 189,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "X, y = df_mpg.drop(\"mpg\", axis = 1).to_numpy(), df_mpg[\"mpg\"].to_numpy()\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=.2, random_state=42)\n",
+    "X_train_small, X_val, y_train_small, y_val = train_test_split(X_train, y_train, test_size=.3, random_state=42)\n"
    ]
   }
  ],
@@ -161,7 +608,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.10.4"
   },
   "orig_nbformat": 4
  },
