prep for kaggle

--- a/Code-Along/L3_Image_processing.ipynb
+++ b/Code-Along/L3_Image_processing.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -29,17 +29,17 @@
      "output_type": "stream",
      "text": [
       "current_dir='c:\\\\Users\\\\chris\\\\Documents\\\\GitHub\\\\Deep_learning_Christopher_Seander\\\\Code-Along'\n",
-      "['L0_MLP_Linear_Regression.ipynb', 'L1_MLP_Classification.ipynb', 'L2_MLP_Image_classification.ipynb', 'L3_Image_processing.ipynb']\n",
+      "['L0_MLP_Linear_Regression.ipynb', 'L1_MLP_Classification.ipynb', 'L2_MLP_Image_classification.ipynb', 'L3_Image_processing.ipynb', 'L4_CNN._intro.ipynb', 'L5_Transfer_learning;.ipynb']\n",
       "data_dir='c:\\\\Users\\\\chris\\\\Documents\\\\GitHub\\\\Deep_learning_Christopher_Seander\\\\Data'\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "['Homer_Simpson_2006.png']"
+       "['Homer_Simpson_2006.png', 'processed_images']"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -76,10 +76,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x23c3e404d30>"
+       "<matplotlib.image.AxesImage at 0x189f8ce7e50>"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +199,7 @@
        "'c:\\\\Users\\\\chris\\\\Documents\\\\GitHub\\\\Deep_learning_Christopher_Seander\\\\Data/processed_images/filtered_images_COPY.png'"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -211,57 +211,6 @@
     "target_path = f\"{processed_images_path}/filtered_images_COPY.png\"\n",
     "\n",
     "shutil.copyfile(source_path, target_path)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n"
-     ]
-    }
-   ],
-   "source": [
-    "import tensorflow as tf\n",
-    "devices = tf.config.list_physical_devices('GPU')\n",
-    "print(len(devices)) "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[]\n",
-      "<function is_built_with_cuda at 0x000002B27F2753A0>\n",
-      "\n",
-      "[PhysicalDevice(name='/physical_device:CPU:0', device_type='CPU')]\n"
-     ]
-    }
-   ],
-   "source": [
-    "import tensorflow as tf\n",
-    "\n",
-    "print(tf.config.list_physical_devices('GPU'))\n",
-    "# [PhysicalDevice(name='/physical_device:GPU:0', device_type='GPU')]\n",
-    "\n",
-    "print(tf.test.is_built_with_cuda)\n",
-    "# <function is_built_with_cuda at 0x7f4f5730fbf8>\n",
-    "\n",
-    "print(tf.test.gpu_device_name())\n",
-    "# /device:GPU:0\n",
-    "\n",
-    "print(tf.config.get_visible_devices())\n",
-    "# [PhysicalDevice(name='/physical_device:CPU:0', device_type='CPU'), PhysicalDevice(name='/physical_device:GPU:0', device_type='GPU')]"
    ]
   }
  ],
